; ModuleID = '/home/carl/AnghaBench/stb/tests/sdf/extr_sdf_test.c_blend_pixel.c'
source_filename = "/home/carl/AnghaBench/stb/tests/sdf/extr_sdf_test.c_blend_pixel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bitmap = common dso_local global i8*** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @blend_pixel(i32 %0, i32 %1, i32 %2, float %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca float, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store float %3, float* %8, align 4
  store i32 0, i32* %9, align 4
  br label %10

10:                                               ; preds = %45, %4
  %11 = load i32, i32* %9, align 4
  %12 = icmp slt i32 %11, 3
  br i1 %12, label %13, label %48

13:                                               ; preds = %10
  %14 = load float, float* %8, align 4
  %15 = load i8***, i8**** @bitmap, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i8**, i8*** %15, i64 %17
  %19 = load i8**, i8*** %18, align 8
  %20 = load i32, i32* %5, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i8*, i8** %19, i64 %21
  %23 = load i8*, i8** %22, align 8
  %24 = load i32, i32* %9, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %23, i64 %25
  %27 = load i8, i8* %26, align 1
  %28 = load i32, i32* %7, align 4
  %29 = call i64 @stb_lerp(float %14, i8 zeroext %27, i32 %28)
  %30 = sitofp i64 %29 to double
  %31 = fadd double %30, 5.000000e-01
  %32 = fptoui double %31 to i8
  %33 = load i8***, i8**** @bitmap, align 8
  %34 = load i32, i32* %6, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i8**, i8*** %33, i64 %35
  %37 = load i8**, i8*** %36, align 8
  %38 = load i32, i32* %5, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i8*, i8** %37, i64 %39
  %41 = load i8*, i8** %40, align 8
  %42 = load i32, i32* %9, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i8, i8* %41, i64 %43
  store i8 %32, i8* %44, align 1
  br label %45

45:                                               ; preds = %13
  %46 = load i32, i32* %9, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %9, align 4
  br label %10

48:                                               ; preds = %10
  ret void
}

declare dso_local i64 @stb_lerp(float, i8 zeroext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
